# CareSync-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/ai_assistance/: apps.py  prompts.py  service.py  urls.py  utils.py
apps/ai_assistance/serializers/: medical_process_summary_serializer.py  medicine_info_serializer.py  precaution_detail_serializer.py
apps/ai_assistance/views/: medical_process_summary_view.py  medicine_info_view.py  precaution_detail_view.py
apps/api_token/: apps.py  urls.py  views.py
apps/member/: urls.py
apps/membership/: apps.py  urls.py
apps/membership/migrations/: 0001_initial.py
apps/membership/models/: __init__.py  group.py  member.py
apps/membership/serializers/: member_serializer.py
apps/membership/views/: group_view.py  member_view.py
config/: asgi.py  settings.py  urls.py  wsgi.py
utils/drf/: drf-spectacular_ext.py  filter.py  pagination.py  swagger.py
